# ProjectDjango

./: .env  README.md  fixture.json  groups.json  pyproject.toml  requirements.txt
blogs/: admin.py  forms.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py
blogs/templates/blogs/: add_post.html  base.html  delete_post.html  header.html  home_data.html  post_details.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_product.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0003_alter_product_options.py  0004_product_is_available_product_owner.py  0005_alter_product_image.py  0006_review.py  0007_delete_review.py
catalog/templates/: base.html  products_detail.html  products_list.html
catalog/templates/catalog/: product_list.html
catalog/templates/includes/: inc_menu.html
catalog/templates/products/: base.html  category_list.html  contacts.html  product_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/products/includes/: central_heading.html  inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: logged.html  login.html  register.html  user_form.html
users/templates/users/includes/: inc_menu.html
